--- a/index.html
+++ b/index.html
@@ -8,46 +8,111 @@
 </head>
 <body>
     <div class="container">
+        
+        <!-- SIDEBAR -->
         <aside class="sideBar">
             <nav>
                 <p>Navigation</p>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#about">Research</a></li>
-                <li><a href="#about">Writing</a></li>
-                <li><a href="#about">Languages</a></li>
-                <li><a href="#about">Contact</a></li>
+                <li><a href="#research">Research</a></li>
+                <li><a href="#writing">Writing</a></li>
+                <li><a href="#languages">Languages</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             </nav>
 
             <div class="socials">
                 <p>Socials</p>
-                <a href="">github</a>
-                <a href="">twitter</a>
-                <a href="">instagram</a>
+                <ul class="socialLinks">
+                    <li><a href="">github</a></li>
+                    <li><a href="">twitter</a></li>
+                    <li><a href="">instagram</a></li>
+                </ul>
             </div>
         </aside>
+
+        <!-- ALL CONTENT -->
         <main class="content">
+
+            <!-- ABOUT SECTION -->
+
             <section id="about">
                 <h1>Adrián Bethencourt Cruzado (@adrianbecru)</h1>
                 <p>I study Bachillerato at IES Teguise.</p>
                 <p>My primary interests lie in engineering, physics and everything regarding how our brains learn and connect ideas.</p>
                 <p>I live in Lanzarote, Spain, where I have lived almost all my life. In 2025 I went a year abroad and became an international students at THSS, CA.</p>
             </section>
+            <section>
+                <h2>Currently:</h2>
+                <ul>
+                    <li>Learning C</li>
+                    <li>Doing CS50 (week 1)</li>
+                    <li>Studying Calculus I</li>
+                    <li>Participating in Hack Club</li>
+                </ul>
+            </section>
+
+
+            <!-- PROJECTS SECTION -->
+
             <section id="projects">
-                <h2>Projects</h2>
-                <p>Coming soon.</p>
+                <h2>Selected Projects</h2>
+                <div class="projectContainer">
+                    <div class="project">
+                        <p>Black Holes Website</p>
+                        <a href="">[github]</a>
+                        <p class="tags">#webdev #html #css</p>
+                    </div>
+                    <div class="project">
+                        <p>Pong Game</p>
+                        <a href="">[github]</a>
+                        <p class="tags">#godot #gamedev #gdscript</p>
+                    </div>
+                    <div>
+                        <p><a href="projects.html">View all projects</a></p>
+                    </div>
+                </div>
             </section>
-            <section id="languages">
-                <h2>Languages</h2>
-                <p>Spanish - Native</p>
-                <p>English - Fluent</p>
-            </section>
+
+            <!-- PROJECTS SECTION -->
+             <section>
+                <h2>Timeline</h2>
+                <ul>
+                    <li>2026 – Exploring how spaced repetition affects long-term retention</li>
+                    <li>2026 – Studying thermodynamics independently</li>
+                </ul>
+             </section>
+
+            <!-- WRITING SECTION -->
+
             <section id="writing">
-                <h2>Writing</h2>
+                <h2>Articles</h2>
                 <p>Thoughts on learning, physics, systems, growth and other stuff</p>
+                <span></span>
+                <p><a href="">On Discipline vs Motivation</a></p>
+                <p><a href="">On Discipline vs Motivation</a></p>
+                <p><a href="">On Discipline vs Motivation</a></p>
+                <span></span>
+                <p><a href="/writing.html">All writing -></a></p>
             </section>
+
+            <!-- TOOLS SECTION -->
+
+            <section id="languages">
+                <h2>Tools I use:</h2>
+
+                <p><strong>Programming:</strong></p>
+                <p>JavaScript · GDScript · GitHub · C (learning)</p>
+
+                <p><strong>Creative tools:</strong></p>
+                <p>Blender · Figma · Inkscape · Affinity</p>
+
+                <p><strong>Languages I speak fluently:</strong></p>
+                <p>Spanish · English</p>
+            </section>
+     
         </main>
     </div>
 
