Updated Styles for better optimization

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
             <section id="about">
                 <h1>Adrián Bethencourt Cruzado (@adrianbecru)</h1>
-                <p>I study Bachillerato at IES Teguise.</p>
+                <p>I study Bachillerato at <a href="https://www3.gobiernodecanarias.org/medusa/edublog/iesteguise/" target="_blank">IES Teguise</a>.</p>
                 <p>My primary interests lie in engineering, physics and everything regarding how our brains learn and connect ideas.</p>
-                <p>I live in Lanzarote, Spain, where I have lived almost all my life. In 2025 I studied at THSS, CA, as an international student and earned multiple awards.</p>
+                <p>I live in Lanzarote, Spain, where I have lived almost all my life. In 2025 I studied at <a href="https://secondary.sd42.ca/thss/" target="_blank">THSS</a>, CA, as an international student and earned multiple <a href="">awards</a>.</p>
             </section>
 
             <!-- NOW SECTION -->
@@ -58,7 +58,7 @@
                     <li>Studying Calculus I</li>
                     <li>Participating in Hack Club</li>
                 </ul>
-                <p><a href="">Check out my learning log -></a></p>
+                <p><a class="boldLink" href="">Check out my learning log -></a></p>
             </section>
 
 
@@ -78,7 +78,7 @@
                         <p class="tags">#godot #gamedev #gdscript</p>
                     </div>
                     <div>
-                        <p><a href="projects.html">View all projects -></a></p>
+                        <p><a class="boldLink" href="projects.html">View all projects -></a></p>
                     </div>
                 </div>
             </section>
@@ -93,7 +93,7 @@
                 <p><a href="">On Discipline vs Motivation</a></p>
                 <p><a href="">On Discipline vs Motivation</a></p>
                 <span></span>
-                <p><a href="/writing.html">All writing -></a></p>
+                <p><a class="boldLink" href="/writing.html">All writing -></a></p>
             </section>
 
             <!-- TOOLS SECTION -->
