Updated Styling & pfp animation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         
         <!-- SIDEBAR -->
         <aside class="sideBar">
+            <img class="pfp" src="/gallery/pfp.jpg" alt="img not found">
             <nav>
                 <p>Navigation</p>
             <ul>
@@ -20,19 +21,21 @@
                 <!-- <li><a href="#research">Research</a></li> -->
                 <li><a href="#writing">Writing</a></li>
                 <li><a href="#tools">Tools & Languages</a></li>
-                <li><a href="#contact">Contact</a></li>
                 <li><a href="#timeline">Timeline</a></li>
+                <li><a  href="#contact">Contact</a></li>
             </ul>
             </nav>
 
             <div class="socials">
                 <p>Socials</p>
                 <ul class="socialLinks">
-                    <li><a href="">github</a></li>
-                    <li><a href="">twitter</a></li>
-                    <li><a href="">instagram</a></li>
-                    <li><a href="">freeCodeCamp</a></li>
-                    <li><a href="">edX</a></li>
+                    <li><a href="https://profile.edx.org/u/Ryan_Court" target="_blank">edX</a></li>
+                    <li><a href="https://www.chess.com/member/kinglanito" target="_blank">Chess</a></li>
+                    <li><a href="https://cults3d.com/es/usuarios/adrianbecru/modelos-3d" target="_blank">Cults</a></li>
+                    <li><a href="https://github.com/adrianbecru" target="_blank">GitHub</a></li>
+                    <li><a href="https://x.com/adrianbecru" target="_blank">Twitter</a></li>
+                    <li><a href="https://www.instagram.com/adrianbecru/" target="_blank">Instagram</a></li>
+                    <li><a href="https://www.freecodecamp.org/adrianbecru" target="_blank">freeCodeCamp</a></li>
                 </ul>
             </div>
         </aside>
@@ -43,11 +46,15 @@
             <!-- ABOUT SECTION -->
 
             <section id="about">
-                <h1>Adrián Bethencourt Cruzado (@adrianbecru)</h1>
+                <h1>
+                    <span class="name">Adrián Bethencourt Cruzado</span>
+                    <span class="handle">@adrianbecru</span> 
+                </h1>
                 <p>I study Bachillerato at <a href="https://www3.gobiernodecanarias.org/medusa/edublog/iesteguise/" target="_blank">IES Teguise</a>.</p>
                 <p>My primary interests lie in engineering, physics and everything regarding how our brains learn and connect ideas.</p>
                 <p>I live in Lanzarote, Spain, where I have lived almost all my life. In 2025 I studied at <a href="https://secondary.sd42.ca/thss/" target="_blank">THSS</a>, CA, as an international student and earned multiple <a href="">awards</a>.</p>
             </section>
+            <hr>
 
             <!-- NOW SECTION -->
             <section>
@@ -60,7 +67,7 @@
                 </ul>
                 <p><a class="boldLink" href="">Check out my learning log -></a></p>
             </section>
-
+            <hr>
 
             <!-- PROJECTS SECTION -->
 
@@ -82,6 +89,7 @@
                     </div>
                 </div>
             </section>
+            <hr>
 
             <!-- WRITING SECTION -->
 
@@ -95,6 +103,7 @@
                 <span></span>
                 <p><a class="boldLink" href="/writing.html">All writing -></a></p>
             </section>
+            <hr>
 
             <!-- TOOLS SECTION -->
 
@@ -110,16 +119,23 @@
                 <p><strong>Languages I speak fluently:</strong></p>
                 <p>Spanish · English</p>
             </section>
+            <hr>
             
              <!-- TIMELINE SECTION -->
              <section id="timeline">
                 <h2>Timeline</h2>
-                <ul>
+                <ul class="nodeList">
                     <li>2026 – Exploring how spaced repetition affects long-term retention</li>
-                    <li>2026 – Studying thermodynamics independently</li>
+                    <li class="last">2026 – Studying thermodynamics independently</li>
                 </ul>
              </section>
+             <hr>
 
+             <!-- CONTACT SECTION -->
+             <section id="contact">
+                <h2>Contact:</h2>
+                <p>If you'd like to collaborate or talk about engineering, physics, or projects, feel free to send me an email at <a class="boldLink" href="mailto:adrianbecru@gmail.com">adrianbecru@gmail.com</a>.</p>
+             </section>
         </main>
     </div>
 
