--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <!-- <li><a href="#research">Research</a></li> -->
                 <li><a href="#writing">Writing</a></li>
                 <li><a href="#tools">Tools & Languages</a></li>
+                <li><a href="">Bookshelf</a></li>
                 <li><a href="#timeline">Timeline</a></li>
                 <li><a  href="#contact">Contact</a></li>
             </ul>
